@@ -22,9 +22,9 @@ killall5 -- send a signal to all processes.
 .B killall5
 .RB -signalnumber
 .RB [ \-o
-.IR omitpid ]
+.IR omitpid[,omitpid..]]
 .RB [ \-o
-.IR omitpid.. ]
+.IR omitpid[,omitpid..].. ]
 .SH DESCRIPTION
 .B killall5
 is the SystemV killall command. It sends a signal to all processes except
